# Game-engine

./: CMakeLists.txt  Makefile  README.md
srcs/: main.cpp
srcs/color/: ColorBuffer.cpp  ColorBuffer.hpp
srcs/engine/: Engine.cpp  Engine.hpp
srcs/matrix/: matrix.cpp  matrix.hpp
srcs/mesh/: mesh.hpp
srcs/vector/: Vector.cpp  Vector.hpp
